# vulkan-on-rust

./: Cargo.toml  README.md  build.rs
src/: main.rs  platform.rs  validation.rs
src/shaders/: triangle.frag  triangle.vert
