[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shaderc = "0.7.2"

[dependencies]
ash = "0.32.1"
winit = "0.25.0"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"