[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shaderc = "0.7.2"

[dependencies]
ash = "0.33.0"
winit = "0.25.0"
log = "0.4"
cgmath = "0.18.0"
memoffset = "0.6.0"
image = "0.23.14"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.20.0"
cocoa = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"